--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,16 @@ services:
     volumes:
       - config:/etc/apache2/
       - data:/var/www/html/
+
+  mysql:
+    image: mysql:8
+    ports:
+      - 3309:3306
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: database
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - mysql:/var/lib/mysql
